[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[project]
name = "pgbackup"
version = "0.1.0"
description = "A utility for backing up PostgreSQL databases."
readme = "README.md"
authors = [
    {name = "Jacob Archambault"},
]
requires-python = ">=3.12"
dependencies = [
    "boto3",
]

[project.urls]
Homepage = "https://github.com/jacobarchambault/pgbackup"

[project.scripts]
pgbackup = "pgbackup.cli.cli:main"

[tool.pdm]
package-dir = "src"
includes = [
    "src/pgbackup/**/*.py"
]
excludes = [
    "src/pgbackup/**/test_*.py"
]
